05-examples/hello-nginx/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
  namespace: hello-nginx
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: nginx-hello
